force-app/main/default/objects/Inventory_Transaction__c/fields/Fuel_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Inventory__c</fullName>
    <label>Fuel Inventory</label>
    <type>Lookup</type>
    <referenceTo>Fuel_Inventory__c</referenceTo>
    <relationshipName>Inventory_Transactions</relationshipName>
</CustomField>