force-app/main/default/objects/Inventory_Transaction__c/fields/Movement_Type__c.field-meta.xml
<CustomField>
    <fullName>Movement_Type__c</fullName>
    <label>Movement Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Receipt</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Transfer-In</fullName>
            </value>
            <value>
                <fullName>Transfer-Out</fullName>
            </value>
            <value>
                <fullName>Consumption</fullName>
            </value>
            <value>
                <fullName>Reconciliation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>