force-app/main/default/objects/Inventory_Transaction__c/fields/Transacted_By__c.field-meta.xml
<CustomField>
    <fullName>Transacted_By__c</fullName>
    <label>Transacted By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Inventory_Transaction_Users</relationshipName>
</CustomField>