force-app/main/default/objects/Inventory_Transaction__c/fields/Volume_Before__c.field-meta.xml
<CustomField>
    <fullName>Volume_Before__c</fullName>
    <label>Volume Before</label>
    <type>Number</type>
    <precision>14</precision>
    <scale>2</scale>
</CustomField>