force-app/main/default/objects/Inventory_Transaction__c/fields/Volume_Change__c.field-meta.xml
<CustomField>
    <fullName>Volume_Change__c</fullName>
    <label>Volume Change</label>
    <type>Number</type>
    <precision>14</precision>
    <scale>2</scale>
</CustomField>